<resources>
    <string name="app_name">智慧寸草</string>
    <string name="login">登录</string>
    <string name="today_task">今日任务</string>
    <string name="change_shifts">交接班</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="start_job">开始工作</string>
    <string name="come_room">进入房间</string>
    <string name="ylyxt">智能养老系统</string>
    <string name="lrxx">老人信息</string>
    <string name="qhl">去护理</string>
    <string name="wdxx">我的消息</string>
    <string name="m_task">明日任务</string>
    <string name="exit_user">退出账户</string>
    <string name="nil"> </string>
    <string name="complete">完成</string>
    <string name="checking_information">核对信息</string>
    <string name="needfollow">%1s  需要关注</string>
    <string name="have_serious_abnormality11">%1s  有严重异常</string>
    <string name="back">返回</string>
    <string name="temperature">体温</string>
    <string name="blood_pressure">血压</string>
    <string name="record_success">记录成功</string>
    <string name="record_content">记录内容</string>
    <string name="need_to_see">需关注</string>
    <string name="have_serious_abnormality">有严重异常</string>
    <string name="handover_end">交班完成，恭喜你!\n又完成了一天有意义的工作！</string>
    <string name="text_entryTime">%1s 入职</string>
    <string name="text_workingyears">工龄:%1s</string>
    <string name="text_superiorName">上级名称:%1s</string>
    <string name="next_line">%1s\n</string>
    <string name="save">保存</string>
    <string name="mine_title">账号信息</string>
    <string name="msg_title_other">消息</string>

    <string name="msg_title_task">去护理</string>

    <string name="old_info_title">老人信息</string>

    <string name="room_title">房间列表</string>
</resources>
