<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/ylyxt"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone"
             />

        <LinearLayout
            android:id="@+id/title_back"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_marginLeft="16dp"
                android:padding="8dp"
                android:id="@+id/bar_back"
                android:drawableLeft="@mipmap/bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/bar_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginRight="16dp"
                app:srcCompat="@mipmap/more" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_ll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/main_rg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bar" />


    <RadioGroup
        android:id="@+id/main_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/main_rb_homepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_tab_task"
            android:button="@null"
            android:checked="false"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/task"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/today_task"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/main_rb_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_tab_jjb"
            android:button="@null"
            android:checked="false"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/jjb"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/change_shifts"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/main_rb_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_tab_msg"
            android:button="@null"
            android:checked="false"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/msg"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/message"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/main_rb_mine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_tab_mine"
            android:button="@null"
            android:checked="false"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/mine"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/mine"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>